--- a/index.html
+++ b/index.html
@@ -26,10 +26,17 @@
         <h2 class="bullet">Why Git?</h2>
         <h3 class="bullet">Keeps a history of your code</h3>
         <h3 class="bullet">Undo on steroids</h3>
-        <h3 class="bullet">Handles conflicts (merges)</h3>
+        <h3 class="bullet">Handles conflicts (merges) (more on this later)</h3>
         <h3 class="bullet">Also:</h3>
       </section>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/GitHub-Mark-120px-plus.png" alt="GitHub cat logo" width="120" height="120"><img src="images/GitHub_Logo.png" alt="GitHub wordmark" width="250" height="102" class="bullet"></section>
+      <section>
+        <h2 class="bullet">Collaboration</h2>
+        <h3 class="bullet">Old Method: USB</h3>
+        <h3 class="bullet">Now: Shared on the cloud</h3>
+        <h3 class="bullet">Everyone has their own version</h3>
+        <h3 class="bullet">Versions are merged together</h3>
+      </section>
       <section>
         <h2 class="bullet">Let's begin - do this once.</h2>
         <h3 class="bullet">First: make a repository on your local computer.</h3>
